--- a/firebase-import.json
+++ b/firebase-import.json
@@ -1,1 +1,1 @@
-{"red":{"1":"a","2":"b","3":"c","4":"d"},"blue":{"1":"e","2":"f","3":"g","4":"h"},"green":{"1":"i","2":"j","3":"k","4":"l"}}
+{"popsicles":{"red":{"1":"a","2":"b","3":"c","4":"d"},"blue":{"1":"e","2":"f","3":"g","4":"h"},"green":{"1":"i","2":"j","3":"k","4":"l"}}}
